[package]
name = "llm-context-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-colors = "0.3"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
log = { version = "0.4", features = ["serde"]}
env_logger = "0.11"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
termion = "4.0.5"
dirs = "6.0.0"
tracing = "0.1.41"
ahash = "0.8.12"
lazy_static = "1.5.0"
nohash-hasher = "0.2.0"
smallstr = "0.3.0"
