[package]
name = "llm-context-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-colors = "0.3"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
log = { version = "0.4", features = ["serde"]}
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"
termion = "4.0.5"
dirs = "6.0.0"
tracing = "0.1.41"
ahash = "0.8.12"
lazy_static = "1.5.0"
nohash-hasher = "0.2.0"
smallstr = "0.3.0"
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11"
lsp-types = "0.97"
url = "2.5.4"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
